# dechat-services

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
common/: Cargo.toml
data_service/: Cargo.toml
data_service/src/: app_state.rs  lib.rs  main.rs
data_service/src/test_helpers/: fixtures.rs
event_handler/: Cargo.toml
event_handler/src/: main.rs
event_handler/src/sui/: sui.rs  wallet.rs
repository/: .env  Cargo.toml
repository/migrations/: 0001_core_tables.sql
repository/src/: lib.rs
repository/src/repo/: base.rs
repository/src/repo/post/: model.rs  post.rs
repository/src/repo/profile/: model.rs  profile.rs
repository/src/test_helpers/: fixtures.rs
tools/: docker-on-local.sh
