[workspace]

members = [
    "event_handler",
    "data_service"
]

[workspace.dependencies]
futures = "0.3.29"
futures-core = "0.3.29"
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config"}
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.75"