[workspace]

members = [
    "event_handler",
    "data_service",
    "repository",
    "common"
]

[workspace.dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
fake = { version = "2.6.1", features=['derive']}
futures = "0.3.29"
futures-core = "0.3.29"
futures-util = "0.3.29"
lazy_static = "1.4.0"
log = "0.4.16"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config"}
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
sui-sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.14"