[package]
name = "data_service"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "data_service"

[dependencies]
common = { path = "../common" }
repository = { path = "../repository" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dotenv.workspace = true
env_logger.workspace = true
fake.workspace = true
log.workspace = true
futures.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
sui-sdk.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
actix-http = "3.4.0"
actix-web = "4.4.0"
actix-multipart = "0.6.1"
multipart = "0.18.0"
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }